@@ -190,6 +190,14 @@ class testAnnexes(PloneMeetingTestCase):
         self._checkElementConfidentialAnnexAccess(cfg, item, annexNotConfidential, annexConfidential,
                                                   annexes_table, categorized_child)
 
+    def _setUpGroupInCharge(self, item):
+        """As group in charge is an adaptable method, it may be setup differently."""
+        proposingGroup = item.getProposingGroup(theObject=True)
+        proposingGroup.setGroupsInCharge(('vendors', ))
+        item.setProposingGroupWithGroupInCharge(
+            '{0}__groupincharge__{1}'.format(
+                item.getProposingGroup(), 'vendors'))
+
     def test_pm_ItemGetCategorizedElementsWithConfidentialityForGroupInCharge(self):
         ''' '''
         cfg = self.meetingConfig
@@ -203,10 +211,7 @@ class testAnnexes(PloneMeetingTestCase):
         self.assertFalse(proposingGroup.getGroupsInCharge())
         cfg.setItemAnnexConfidentialVisibleFor(('reader_groupincharge', ))
         update_all_categorized_elements(item)
-        proposingGroup.setGroupsInCharge(('vendors', ))
-        item.setProposingGroupWithGroupInCharge(
-            '{0}__groupincharge__{1}'.format(
-                item.getProposingGroup(), 'vendors'))
+        self._setUpGroupInCharge(item)
         item.updateLocalRoles()
 
         self.changeUser('pmReviewer2')
